@@ -155,8 +155,9 @@ module Sequel
                 end
               end
               define_method("#{column}=") do |v| 
-                if !changed_columns.include?(column) && (new? || get_column_value(column) != v)
-                  changed_columns << column
+                cc = changed_columns
+                if !cc.include?(column) && (new? || get_column_value(column) != v)
+                  cc << column
 
                   will_change_column(column) if respond_to?(:will_change_column)
                 end
